compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.java
public final class JvmPackageNameKt /* a.b.c.JvmPackageNameKt*/ {
  public static final void f();//  f()

}